# GT_Theory

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: lint.yml  release.yml  smoke.yml  tests.yml
catalogs/: all_sites.csv  boreholes.yaml
data/insar/: README.md
data/koppen/: README.md
data/supersite_forge/: README.md  (+1 more)
figures/: ed1_synthetic_twin.py  ed2_carslaw_jaeger.py  fig1_interfaces.py  fig2_borehole_map.py  fig3_erfc_envelope.py  fig3b_permafrost_theory.py  fig3c_residual_by_band.py  fig4_sat_gst_amplification.py  fig5_regime_diagrams.py  fig6_heat_budget.py  fig7_gap_fingerprints.py  figA_anomalous_sites.py
scripts/: build_full_catalog.py  compute_f5_bandpass.py  compute_global_l_regime.py  extract_cru_sat.py  forward_umiujaq_merged.py  gather_per_site.py  ingest_borealis_vdtbs.py  ingest_real_profile.py  insar_supersite_check.py  invert_global_huang_pollack.py  invert_profile.py  invert_umiujaq_coupled.py  invert_umiujaq_merged.py  make_synthetic_profile.py  recompute_f2_bayesian_eiv.py  recompute_f2_with_advection.py  recompute_f3_with_nfactor.py  recompute_global_with_koppen.py  run_case_studies.py  run_forge_forward.py  run_mont_terri_forward.py  run_umiujaq_forward.py
slurm/: setup_pik_env.sh  submit_smoke10.sbatch
tests/: test_analysis_insar.py  test_bayesian_eiv.py  test_benchmarks_bonacina.py  test_benchmarks_carslaw_jaeger.py  test_benchmarks_stefan.py  test_benchmarks_terzaghi.py  test_benchmarks_theis.py  test_benchmarks_undrained_ratio.py  test_cases.py  test_column_coupled.py  test_column_enthalpy.py  test_column_fvm_permafoam.py  test_column_thermo_freeze_coupled.py  test_diagnostics_regime.py  test_domain_2d.py  test_effective_properties.py  test_fig2_borehole_map.py  test_fingerprints.py  test_fingerprints_f2_f3.py  test_fingerprints_f5.py  test_forward_misfit.py  test_freezing_curve.py  test_groundwater_v_darcy.py  test_inversion_coupled.py  test_inversion_recovery.py  test_io_and_catalog.py  test_io_egms.py  test_io_ggmn.py  test_io_koppen.py  test_io_nordicana.py  test_solver_twin.py  test_stats_bootstrap.py  test_stats_signal.py  test_theory_dimless_regime.py  test_zhang_nfactor.py
workflows/: Snakefile
(+100 files in other folders)
